# GAMES101-------

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.hpp  Texture.hpp  Triangle.hpp  rasterizer.hpp
src/: Texture.cpp  main.cpp  rasterizer.cpp
